--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,11 +29,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
+  http: ^0.13.4
+  shared_preferences: ^2.0.13
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
