--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,15 @@ dependencies:
   shared_preferences: ^2.0.13
   flutter_easyloading: ^3.0.0
   animated_text_kit: ^4.2.1
+  flutter_html: ^2.2.1
+  equatable: ^2.0.3
+  pin_code_fields: ^7.4.0
+  mime: ^1.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  equatable: ^2.0.3
-  pin_code_fields: ^7.4.0
-  mime: ^1.0.2
 
 dev_dependencies:
   flutter_test:
