--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   equatable: ^2.0.3
   pin_code_fields: ^7.4.0
   mime: ^1.0.2
+  sqflite: ^2.0.0+4
 
 
   # The following adds the Cupertino Icons font to your application.
